<resources>
    <string name="app_name">Mangapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author_s">Author(s):</string>
    <string name="artist_s">Artist(s):</string>
    <string name="status">Status:</string>
    <string name="start_reading">Start Reading</string>
    <string name="alternative_name">Alternative Name:</string>
    <string name="genre_s">Genre(s):</string>
    <string name="summary">Summary:</string>
    <string name="cover">Cover</string>
</resources>
